[package]
name = "samples"
version = "0.1.0"
authors = ["STBoyden <stboyden@stboyden.xyz>"]
edition = "2018"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.0.0"
ptgui = {path = "../"}

[[bin]]
name = "button-sample"
path = "src/button_test.rs"

[[bin]]
name = "button-sample-additional-draw"
path = "src/button_with_additional_draws.rs"
